Fixed responsive table issue causing horizontal scrollbar and issue with hashing passwords when logging in

--- a/client/src/components/reimbursement/reimbursement-table.scss
+++ b/client/src/components/reimbursement/reimbursement-table.scss
@@ -29,7 +29,7 @@
 .extra-reimbursement-details{
     cursor: pointer;
     .container{
-        padding: 12px !important;
+        padding: 15px !important;
     }
     dd{
         word-wrap: break-word;
